[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestvault"
version = "0.1.0"
description = "Container-native backup utility for PostgreSQL and MongoDB with S3-compatible storage backends"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NestVault Authors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Archiving :: Backup",
]
keywords = ["backup", "postgresql", "mongodb", "s3", "docker"]
dependencies = [
    "croniter>=2.0.0",
    "boto3>=1.34.0",
    "b2sdk>=2.0.0",
    "python-dateutil>=2.8.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
nestvault = "nestvault.main:main"

[project.urls]
Homepage = "https://github.com/ForgeNest-services/nestvault"
Repository = "https://github.com/ForgeNest-services/nestvault.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["nestvault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
